...
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.contentMode = .scaleAspectFit
        
        return imageView
    }()
    
    private lazy var searchTextField: UITextField = {
        let tf = UITextField()
        tf.translatesAutoresizingMaskIntoConstraints = false
        // Add color to placeholder text
        tf.attributedPlaceholder = NSAttributedString(string: ConstantText.searchTextFieldPlaceholder,
                                                      attributes: [NSAttributedString.Key.foregroundColor: UIColor.darkGray])
        tf.font = .systemFont(ofSize: 18)
...
