...
    
    lazy var nameLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.font = UIFont.systemFont(ofSize: 32)
        label.textColor = UIColor(named: ColorName.mainDark)
        label.text = "Rick Sanchez"
        
        return label
    }()
    
    private lazy var informationsLabel: UILabel = {
        let label = UILabel()
...
